--- a/html/index.html
+++ b/html/index.html
@@ -5,10 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JavaScript ES6</title>
+    <link rel="stylesheet" href="/css/page1.css">
     <script src="/java/block_scope.js"></script>
 </head>
 <body>
    <script src="/java/arrow_function.js"></script>
    <script src="/java/object.js"></script>
+   <script src="/java/String.js"></script>
+    <script src="/java/Spread_Operator.js"></script>
+    <script src="/java/Rest_parameter.js"></script>
+    <script src="/java/Destructuring.js"></script>
 </body>
 </html>
