--- a/html/index.html
+++ b/html/index.html
@@ -9,11 +9,16 @@
     <script src="/java/block_scope.js"></script>
 </head>
 <body>
-   <script src="/java/arrow_function.js"></script>
-   <script src="/java/object.js"></script>
-   <script src="/java/String.js"></script>
+    <script src="/java/arrow_function.js"></script>
+    <script src="/java/object.js"></script>
+    <script src="/java/String.js"></script>
     <script src="/java/Spread_Operator.js"></script>
     <script src="/java/Rest_parameter.js"></script>
     <script src="/java/Destructuring.js"></script>
+    <script src="/java/Default_Parameter.js"></script>
+    <script src="/Array/join_concat.js"></script>
+    <script src="/Array/push_pop_shift_unshift.js"></script>
+    <script src="/Array/splice_slice.js"></script>
+    <script src="/Array/ForLoop_ForEach_Forof.js"></script>
 </body>
 </html>
