--- a/html/index.html
+++ b/html/index.html
@@ -20,5 +20,9 @@
     <script src="/Array/push_pop_shift_unshift.js"></script>
     <script src="/Array/splice_slice.js"></script>
     <script src="/Array/ForLoop_ForEach_Forof.js"></script>
+    <script src="/Array/search_in_Array.js"></script>
+    <script src="/Array/Array_Map.js"></script>
+    <script src="/Array/Array_Filter.js"></script>
+    <script src="/Array/Array_Reduce.js"></script>
 </body>
 </html>
