--- a/html/index.html
+++ b/html/index.html
@@ -24,5 +24,7 @@
     <script src="/Array/Array_Map.js"></script>
     <script src="/Array/Array_Filter.js"></script>
     <script src="/Array/Array_Reduce.js"></script>
+    <script src="/java/TemplateLiterrals.js"></script>
+    <script src="/java/Computed_Property_Name.js"></script>
 </body>
 </html>
