--- a/html/index.html
+++ b/html/index.html
@@ -26,5 +26,8 @@
     <script src="/Array/Array_Reduce.js"></script>
     <script src="/java/TemplateLiterrals.js"></script>
     <script src="/java/Computed_Property_Name.js"></script>
+    <script src="/java/shorthandPropertyAndMethod.js"></script>
+    <script src="/java/ClassAndProperty_JavaScript.js"></script>
+    <script src="/java/Class_inheritance.js"></script>
 </body>
 </html>
